--- a/webapp/ruby/views/layout.erb
+++ b/webapp/ruby/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sample</title>
-    <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
