--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -1,15 +1,15 @@
 <h1>Iscogram</h1>
 
-<%= escape_html session[:user][:account_name] %>さん
+<div class="header">
+  <%= escape_html session[:user][:account_name] %>さん
+</div>
 
-<div class="submit">
+<div class="isu-submit">
   <form method="post" action="/" enctype="multipart/form-data">
-    <div class="form-file">
-      <span>画像ファイル</span>
+    <div class="isu-form">
       <input type="file" name="file" value="file">
     </div>
-    <div class="form-text">
-      <span>本文</span>
+    <div class="isu-form">
       <textarea name="body"></textarea>
     </div>
     <div class="form-submit">
@@ -21,9 +21,13 @@
 
 <div>
   <% posts.each do |p| %>
-  <div>
-    <img src="/image/<%= p[:id] %>" class="isu-image">
-    <p><%= escape_html p[:body] %></p>
+  <div class="isu-post">
+    <div class="isu-post-image">
+      <img src="/image/<%= p[:id] %>" class="isu-image">
+    </div>
+    <div class="isu-post-text">
+      <%= escape_html(p[:body]).gsub(/\r?\n/, '<br>') %>
+    </div>
   </div>
   <% end %>
 </div>
