--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -28,6 +28,19 @@
     <div class="isu-post-text">
       <%= escape_html(p[:body]).gsub(/\r?\n/, '<br>') %>
     </div>
+    <div>
+      <% if comments[p[:id]] %>
+      <%   comments[p[:id]].each do |c| %>
+      <%=    c[:comment] %>
+      <%   end %>
+      <% end %>
+      <form method="post" action="/comment">
+        <input type="text" name="comment">
+        <input type="hidden" name="post_id" value="<%= p[:id] %>">
+        <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+        <input type="submit" name="submit" value="submit">
+      </form>
+    </div>
   </div>
   <% end %>
 </div>
