--- a/webapp/ruby/views/layout.erb
+++ b/webapp/ruby/views/layout.erb
@@ -9,7 +9,7 @@
     <div class="container">
       <%= yield %>
     </div>
-    <script src="/js/jquery.js"></script>
+    <script src="/js/jquery-2.2.0.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
