--- a/webapp/ruby/views/notify.erb
+++ b/webapp/ruby/views/notify.erb
@@ -1,7 +1,7 @@
 <div>
   <% notifies.each do |n| %>
   <div>
-    <%= n[:comment] %>
+    <%= escape_html(n[:comment]) %>
   </div>
   <% end %>
 </div>
