表示数を減らす

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -24,7 +24,11 @@
 </div>
 
 <div>
+  <% display = 0 %>
   <% posts.each do |p| %>
+  <%   next if users[p[:user_id]][:del_flg] == 1 %>
+  <%   break if display > 30 %>
+  <%   display = display + 1 %>
   <div class="isu-post">
     <div class="isu-post-image">
       <img src="/image/<%= p[:id] %>" class="isu-image">
