--- a/webapp/ruby/views/layout.erb
+++ b/webapp/ruby/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sample</title>
+    <title>Iscogram</title>
     <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css">
   </head>
   <body>
