--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -3,6 +3,15 @@ div {
   padding: 0;
 }
 
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+a:hover {
+  color: red;
+}
+
 .container {
   width: 600px;
   margin: 0 auto;
@@ -49,4 +58,33 @@ textarea {
 .isu-comment-account-name {
   color: gray;
   font-size: small;
+}
+
+.header {
+  margin-top: 30px;
+  height: 60px;
+}
+
+.isu-title {
+  width: 75%;
+  float: left;
+}
+
+.isu-account-name {
+  width: 25%;
+  float: left;
+  text-align: right;
+}
+
+.isu-register {
+  margin-top: 15px;
+}
+
+.alert {
+  margin: 10px 0;
+}
+
+.alert-danger {
+  font-weight: bold;
+  color: red;
 }
