--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -1,11 +1,18 @@
-<h1>Iscogram</h1>
-
 <div class="header">
-  <% if user[:id] != 0 %>
-  <%=  escape_html user[:account_name] %>さん
-  <% else %>
-  ログイン前
-  <% end %>
+  <div class="isu-title">
+    <h1>Iscogram</h1>
+  </div>
+  <div class="isu-account-name">
+    <% if user[:id] != 0 %>
+    <a href="/mypage">
+      <%=  escape_html user[:account_name] %>さん
+    </a>
+    <% else %>
+    <a href="/login">
+      ログイン
+    </a>
+    <% end %>
+  </div>
 </div>
 
 <div class="isu-submit">
@@ -20,6 +27,11 @@
       <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
       <input type="submit" name="submit" value="submit">
     </div>
+    <% if flash[:notice] %>
+    <div id="notice-message" class="alert alert-danger">
+      <%= escape_html(flash[:notice]) %>
+    </div>
+    <% end %>
   </form>
 </div>
 
