--- a/webapp/ruby/views/login.erb
+++ b/webapp/ruby/views/login.erb
@@ -1,7 +1,9 @@
-<h1>ログイン</h1>
+<div class="header">
+  <h1>ログイン</h1>
+</div>
 
 <% if flash[:notice] %>
-<div id="notice-message" class="alert alert-danger" role="alert">
+<div id="notice-message" class="alert alert-danger">
   <%= escape_html(flash[:notice]) %>
 </div>
 <% end %>
@@ -20,4 +22,8 @@
       <input type="submit" name="submit" value="submit">
     </div>
   </form>
+</div>
+
+<div class="isu-register">
+  <a href="/register">ユーザー登録</a>
 </div>
