--- a/webapp/ruby/views/banned.erb
+++ b/webapp/ruby/views/banned.erb
@@ -2,7 +2,7 @@
   <form method="post" action="/admin/banned">
     <% users.each do |u| %>
     <div>
-      <input type="checkbox" name="uid[]" id="uid_<%= u[:id] %>" value="<%= u[:id] %>"> <label for="uid_<%= u[:id] %>"><%= escape_html u[:account_name] %></label>
+      <input type="checkbox" name="uid[]" id="uid_<%= u[:id] %>" value="<%= u[:id] %>" data-account-name="<%= escape_html u[:account_name] %>"> <label for="uid_<%= u[:id] %>"><%= escape_html u[:account_name] %></label>
     </div>
     <% end %>
     <div class="form-submit">
