--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -35,43 +35,7 @@
   </form>
 </div>
 
-<div>
-  <% display = 0 %>
-  <% posts.each do |p| %>
-  <%   break if display > 30 %>
-  <%   display = display + 1 %>
-  <div class="isu-post">
-    <div class="isu-post-image">
-      <img src="/image/<%= p[:id] %>" class="isu-image">
-    </div>
-    <div class="isu-post-text">
-      <%= escape_html(p[:body]).gsub(/\r?\n/, '<br>') %>
-      <div class="isu-post-account-name">
-        <%= escape_html(users[p[:user_id]][:account_name]) %>
-      </div>
-    </div>
-    <div class="isu-post-comment">
-      <% if count[p[:id]] %>
-        <div class="isu-post-comment-count">
-          comments: <%= escape_html(count[p[:id]]) %>
-        </div>
-      <% end %>
-
-      <% if comments[p[:id]] %>
-      <%   comments[p[:id]].each do |c| %>
-      <div class="isu-comment-text">
-        <%= escape_html(c[:comment]) %>
-        <span class="isu-comment-account-name"><%= escape_html(users[c[:user_id]][:account_name]) %></span>
-      </div>
-      <%   end %>
-      <% end %>
-      <form method="post" action="/comment">
-        <input type="text" name="comment">
-        <input type="hidden" name="post_id" value="<%= p[:id] %>">
-        <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
-        <input type="submit" name="submit" value="submit">
-      </form>
-    </div>
-  </div>
-  <% end %>
+<div id="isu-post-more">
+  <button id="isu-post-more-btn" onclick="$.get('/posts', { max_created_at: $('.isu-post:last').data('max') }, function( data ) { $('#isu-post-more').before(data) });">More</button>
 </div>
+<script type="text/javascript">$(function () { $('#isu-post-more-btn').click() });</script>
