postについたコメントをユーザ名付きで表示する機能だよ

--- a/webapp/ruby/views/mypage.erb
+++ b/webapp/ruby/views/mypage.erb
@@ -19,6 +19,14 @@
     <div class="isu-post-text">
       <%= escape_html(m[:value][:body]).gsub(/\r?\n/, '<br>') %>
     </div>
+    <% if m[:comments] && !m[:comments].empty? %>
+      <% m[:comments].each do |c| %>
+        <div class="isu-post-comment-text">
+          <%= escape_html(c[:comment]) %>
+          <span class="isu-comment-account-name"><%= escape_html(users[c[:user_id]][:account_name]) %></span>
+        </div>
+      <% end %>
+    <% end %>
     <% elsif m[:type] == :comment %>
     <div class="isu-comment-text">
       <%= escape_html(m[:value][:comment]) %>
