Move onclick more btn code -> main.js

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -35,5 +35,5 @@
 <%= erb :posts, layout: :layout, locals: { posts: posts, count: count, comments: comments, users: users, user: user } %>
 
 <div id="isu-post-more">
-  <button id="isu-post-more-btn" onclick="$.get('/posts', { max_created_at: $('.isu-post:last').data('max') }, function( data ) { $('#isu-post-more').before(data) });">More</button>
+  <button id="isu-post-more-btn">More</button>
 </div>
