--- a/webapp/ruby/views/posts.erb
+++ b/webapp/ruby/views/posts.erb
@@ -8,32 +8,34 @@
       <img src="/image/<%= p[:id] %>" class="isu-image">
     </div>
     <div class="isu-post-text">
-      <%= escape_html(p[:body]).gsub(/\r?\n/, '<br>') %>
-      <div class="isu-post-account-name">
+      <span class="isu-post-account-name">
         <%= escape_html(users[p[:user_id]][:account_name]) %>
-      </div>
+      </span>
+      <%= escape_html(p[:body]).gsub(/\r?\n/, '<br>') %>
     </div>
     <div class="isu-post-comment">
       <% if count[p[:id]] %>
         <div class="isu-post-comment-count">
-          comments: <%= escape_html(count[p[:id]]) %>
+          comments: <b><%= escape_html(count[p[:id]]) %></b>
         </div>
       <% end %>
 
       <% if comments[p[:id]] %>
       <%   comments[p[:id]].each do |c| %>
       <div class="isu-comment-text">
-        <%= escape_html(c[:comment]) %>
         <span class="isu-comment-account-name"><%= escape_html(users[c[:user_id]][:account_name]) %></span>
+        <%= escape_html(c[:comment]) %>
       </div>
       <%   end %>
       <% end %>
-      <form method="post" action="/comment">
-        <input type="text" name="comment">
-        <input type="hidden" name="post_id" value="<%= p[:id] %>">
-        <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
-        <input type="submit" name="submit" value="submit">
-      </form>
+      <div class="isu-comment-form">
+        <form method="post" action="/comment">
+          <input type="text" name="comment">
+          <input type="hidden" name="post_id" value="<%= p[:id] %>">
+          <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+          <input type="submit" name="submit" value="submit">
+        </form>
+      </div>
     </div>
   </div>
   <% end %>
