絶妙な遅さにする

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -32,7 +32,7 @@
   </form>
 </div>
 
-<%= erb :posts, layout: :layout, locals: { posts: posts, count: count, comments: comments, users: users, user: user } %>
+<%= erb :posts, layout: :layout, locals: { posts: posts, user: user } %>
 
 <div id="isu-post-more">
   <button id="isu-post-more-btn">More</button>
