ヘッダー部分をサブテンプレートに分けた

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -1,16 +1,4 @@
-<div class="header">
-  <div class="isu-title">
-    <h1>Iscogram</h1>
-  </div>
-  <div class="isu-account-name">
-    <% if user[:id] != 0 %>
-    <div><a href="/@<%=  escape_html CGI.escape(user[:account_name]) %>"><%=  escape_html user[:account_name] %>さん</a></div>
-    <div><a href="/logout">ログアウト</a></div>
-    <% else %>
-    <div><a href="/login">ログイン</a></div>
-    <% end %>
-  </div>
-</div>
+<%= erb :header, locals: { me: user } %>
 
 <div class="isu-submit">
   <form method="post" action="/" enctype="multipart/form-data">
