--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -20,7 +20,7 @@
   </form>
 </div>
 
-<%= erb :posts, layout: :layout, locals: { posts: posts } %>
+<%= erb :posts, locals: { posts: posts } %>
 
 <div id="isu-post-more">
   <button id="isu-post-more-btn">More</button>
