--- a/webapp/ruby/views/user.erb
+++ b/webapp/ruby/views/user.erb
@@ -5,7 +5,7 @@
   <div>被コメント数 <span class="isu-commented-count"><%=  escape_html commented_count %></span></div>
 </div>
 
-<%= erb :posts, layout: :layout, locals: { posts: posts } %>
+<%= erb :posts, locals: { posts: posts } %>
 
 <div id="isu-post-more">
   <button id="isu-post-more-btn">More</button>
