sessionから取得したユーザーを表す変数名をmeにした

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -1,4 +1,4 @@
-<%= erb :header, locals: { me: user } %>
+<%= erb :header, locals: { me: me } %>
 
 <div class="isu-submit">
   <form method="post" action="/" enctype="multipart/form-data">
