--- a/webapp/ruby/views/posts_id.erb
+++ b/webapp/ruby/views/posts_id.erb
@@ -1,4 +1,4 @@
-<%= erb :header, locals: { me: user } %>
+<%= erb :header, locals: { me: me } %>
 
 <div>
   <div class="isu-post" data-max="<%= post[:created_at] %>">
