--- a/webapp/ruby/views/header.erb
+++ b/webapp/ruby/views/header.erb
@@ -3,11 +3,11 @@
     <h1>Iscogram</h1>
   </div>
   <div class="isu-account-name">
-    <% if me[:id] != 0 %>
+    <% if me.nil? %>
+    <div><a href="/login">ログイン</a></div>
+    <% else %>
     <div><a href="/@<%=  escape_html CGI.escape(me[:account_name]) %>"><%=  escape_html me[:account_name] %>さん</a></div>
     <div><a href="/logout">ログアウト</a></div>
-    <% else %>
-    <div><a href="/login">ログイン</a></div>
     <% end %>
   </div>
 </div>
