--- a/webapp/ruby/views/user.erb
+++ b/webapp/ruby/views/user.erb
@@ -1,3 +1,5 @@
+<%= erb :header, locals: { me: me } %>
+
 <div class="isu-user">
   <div><span class="isu-user-account-name"><%=  escape_html user[:account_name] %>さん</span>のページ</div>
   <div>投稿数 <span class="isu-post-count"><%=  escape_html post_count %></span></div>
