--- a/webapp/ruby/views/posts_id.erb
+++ b/webapp/ruby/views/posts_id.erb
@@ -1,32 +1,3 @@
 <%= erb :header, locals: { me: me } %>
 
-<div>
-  <div class="isu-post" data-max="<%= post[:created_at] %>">
-    <div class="isu-post-image">
-      <img src="/image/<%= post[:id] %>" class="isu-image">
-    </div>
-    <div class="isu-post-text">
-      <%= escape_html(post[:body]).gsub(/\r?\n/, '<br>') %>
-      <div class="isu-post-account-name">
-        <%= escape_html(users[post[:user_id]][:account_name]) %>
-      </div>
-    </div>
-    <div class="isu-post-comment">
-      <% if count[post[:id]] %>
-        <div class="isu-post-comment-count">
-          comments: <%= escape_html(count[post[:id]]) %>
-        </div>
-      <% end %>
-
-      <% if comments %>
-      <%   comments.each do |c| %>
-      <div class="isu-comment">
-        <span class="isu-comment-text"><%= escape_html(c[:comment]) %></span>
-        <span class="isu-comment-account-name"><%= escape_html(users[c[:user_id]][:account_name]) %></span>
-      </div>
-      <%   end %>
-      <% end %>
-    </div>
-  </div>
-</div>
-
+<%= erb :post, locals: { post: post } %>
