--- a/webapp/ruby/views/layout.erb
+++ b/webapp/ruby/views/layout.erb
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div class="container">
+      <%= erb :header, locals: { me: me } %>
+
       <%= yield %>
     </div>
     <script src="/js/jquery-2.2.0.js"></script>
