--- a/webapp/ruby/views/post.erb
+++ b/webapp/ruby/views/post.erb
@@ -1,4 +1,10 @@
 <div class="isu-post" data-max="<%= post[:created_at] %>">
+  <div class="isu-post-header">
+    <a href="/@<%= escape_html(CGI.escape(post[:user][:account_name])) %>" class="isu-post-account-name"><%= escape_html(post[:user][:account_name]) %></a>
+    <a href="/posts/<%= post[:id] %>" class="isu-post-permalink">
+      <%= erb :smart_time, locals: { time: post[:created_at] } %>
+    </a>
+  </div>
   <div class="isu-post-image">
     <img src="/image/<%= post[:id] %>" class="isu-image">
   </div>
