ロゴをトップページへのリンクにする

--- a/webapp/ruby/views/header.erb
+++ b/webapp/ruby/views/header.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="isu-title">
-    <h1>Iscogram</h1>
+    <h1><a href="/">Iscogram</a></h1>
   </div>
   <div class="isu-account-name">
     <% if me.nil? %>
