--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -21,5 +21,5 @@
 <%= erb :posts, locals: { posts: posts } %>
 
 <div id="isu-post-more">
-  <button id="isu-post-more-btn">More</button>
+  <button id="isu-post-more-btn">もっと見る</button>
 </div>
