ローディング画像を画像にする

--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -22,4 +22,5 @@
 
 <div id="isu-post-more">
   <button id="isu-post-more-btn">もっと見る</button>
+  <img class="isu-loading-icon" src="/img/ajax-loader.gif">
 </div>
