benchmarkerの変更に追随
DOMが変更されたので追随

--- a/webapp/ruby/views/post.erb
+++ b/webapp/ruby/views/post.erb
@@ -18,9 +18,9 @@
     </div>
 
     <% post[:comments].each do |comment| %>
-    <div class="isu-comment-text">
+    <div class="isu-comment">
       <a href="/@<%= escape_html(CGI.escape(comment[:user][:account_name])) %>" class="isu-comment-account-name"><%= escape_html(comment[:user][:account_name]) %></a>
-      <%= escape_html(comment[:comment]) %>
+      <span class="isu-comment-text"><%= escape_html(comment[:comment]) %></span>
     </div>
     <% end %>
     <div class="isu-comment-form">
