--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -85,6 +85,10 @@ textarea {
   text-align: right;
 }
 
+.isu-post-header {
+  margin: 0 15px 15px;
+}
+
 .isu-post-comment {
   margin: 10px 15px 5px 15px;
 }
