--- a/webapp/ruby/views/header.erb
+++ b/webapp/ruby/views/header.erb
@@ -7,8 +7,10 @@
     <div><a href="/login">ログイン</a></div>
     <% else %>
     <div class="isu-account-name"><a href="/@<%=  escape_html CGI.escape(me[:account_name]) %>"><%=  escape_html me[:account_name] %>さん</a></div>
+    <% if me[:authority] == 1 %>
+    <div><a href="/admin/banned">管理者用ページ</a></div>
+    <% end %>
     <div><a href="/logout">ログアウト</a></div>
     <% end %>
   </div>
 </div>
-
