スコアも表示する

--- a/portal/app/views/home/index.erb
+++ b/portal/app/views/home/index.erb
@@ -31,12 +31,14 @@
     <tr>
       <th>時刻</th>
       <th>PASS/FAIL</th>
+      <th>スコア</th>
       <th>メッセージ</th>
     </tr>
     <% @my_scores.each do |score| %>
       <tr>
         <td><%= score.created_at %></td>
         <td><%= score.pass ? 'PASS' : 'FAIL' %></td>
+        <td><%= score.score %></td>
         <td><%= score.message.length > 20 ? (score.message.slice(20) + '...') : score.message %></td>
       </tr>
     <% end %>
