--- a/portal/app/views/layouts/application.html.erb
+++ b/portal/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="pull-left">
-      Login: <%= current_user.try(:name) || 'not login' %>
+      Login: <%= current_user ? (current_user.name + ' (' + current_user.team.name + ')') : 'not login' %>
     </div>
     <div class="pull-right">
       <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-warning' %>
