サイズを固定

--- a/portal/app/views/home/index.erb
+++ b/portal/app/views/home/index.erb
@@ -32,7 +32,7 @@
       <th>時刻</th>
       <th>PASS/FAIL</th>
       <th>スコア</th>
-      <th>メッセージ</th>
+      <th style="width: 500px;">メッセージ</th>
     </tr>
     <% @my_scores.each do |score| %>
       <tr>
