--- a/webapp/golang/templates/post.html
+++ b/webapp/golang/templates/post.html
@@ -1,32 +1,32 @@
 <div class="isu-post" id="pid_{{ .ID }}" data-created-at="{{ .CreatedAt }}">
   <div class="isu-post-header">
-    <a href="/@ .Post.User.AccountName " class="isu-post-account-name"><%= escape_html(post[:user][:account_name]) %></a>
-    <a href="/posts/<%= post[:id] %>" class="isu-post-permalink">
-      <time class="timeago" datetime="<%= post[:created_at].iso8601 %>"></time>
+    <a href="/@{{.User.AccountName}} " class="isu-post-account-name">{{ .User.AccountName }}</a>
+    <a href="/posts/{{.ID}}" class="isu-post-permalink">
+      <time class="timeago" datetime="{{.CreatedAt.Format "2006-01-02T15:04:05-07:00"}}"></time>
     </a>
   </div>
   <div class="isu-post-image">
     <img src="<%= escape_html(image_url(post)) %>" class="isu-image">
   </div>
   <div class="isu-post-text">
-    <a href="/@<%= escape_html(CGI.escape(post[:user][:account_name])) %>" class="isu-post-account-name"><%= escape_html(post[:user][:account_name]) %></a>
+    <a href="/@{{.User.AccountName}}" class="isu-post-account-name">{{ .User.AccountName }}</a>
     {{ .Body }}
   </div>
   <div class="isu-post-comment">
     <div class="isu-post-comment-count">
-      comments: <b><%= escape_html(post[:comment_count]) %></b>
+      comments: <b>{{ .CommentCount }}</b>
     </div>
 
-    <% post[:comments].each do |comment| %>
+    {{ range .Comments }}
     <div class="isu-comment">
-      <a href="/@<%= escape_html(CGI.escape(comment[:user][:account_name])) %>" class="isu-comment-account-name"><%= escape_html(comment[:user][:account_name]) %></a>
-      <span class="isu-comment-text"><%= escape_html(comment[:comment]) %></span>
+      <a href="/@{{.User.AccountName}}" class="isu-comment-account-name">{{.User.AccountName}}</a>
+      <span class="isu-comment-text">{{.Comment}}</span>
     </div>
-    <% end %>
+    {{ end }}
     <div class="isu-comment-form">
       <form method="post" action="/comment">
         <input type="text" name="comment">
-        <input type="hidden" name="post_id" value="<%= post[:id] %>">
+        <input type="hidden" name="post_id" value="{{.ID}}">
         <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
         <input type="submit" name="submit" value="submit">
       </form>
