--- a/webapp/node/views/post.ejs
+++ b/webapp/node/views/post.ejs
@@ -1,33 +1,33 @@
-<div class="isu-post" id="pid_<%= post[:id] %>" data-created-at="<%= post[:created_at].iso8601 %>">
+<div class="isu-post" id="pid_<%= post.id %>" data-created-at="<%= post.created_at %>">
   <div class="isu-post-header">
-    <a href="/@<%= escape_html(CGI.escape(post[:user][:account_name])) %>" class="isu-post-account-name"><%= escape_html(post[:user][:account_name]) %></a>
-    <a href="/posts/<%= post[:id] %>" class="isu-post-permalink">
-      <time class="timeago" datetime="<%= post[:created_at].iso8601 %>"></time>
+    <a href="/@<%= post.user.account_name %>" class="isu-post-account-name"><%= post.user.account_name %></a>
+    <a href="/posts/<%= post.id %>" class="isu-post-permalink">
+      <time class="timeago" datetime="<%= post.created_at %>"></time>
     </a>
   </div>
   <div class="isu-post-image">
-    <img src="<%= escape_html(image_url(post)) %>" class="isu-image">
+    <img src="<%= imageUrl(post) %>" class="isu-image">
   </div>
   <div class="isu-post-text">
-    <a href="/@<%= escape_html(CGI.escape(post[:user][:account_name])) %>" class="isu-post-account-name"><%= escape_html(post[:user][:account_name]) %></a>
-    <%= escape_html(post[:body]).gsub(/\r?\n/, '<br>') %>
+    <a href="/@<%= post.user.account_name %>" class="isu-post-account-name"><%= post.user.account_name %></a>
+    <%= post.body %>
   </div>
   <div class="isu-post-comment">
     <div class="isu-post-comment-count">
-      comments: <b><%= escape_html(post[:comment_count]) %></b>
+      comments: <b><%= post.comment_count %></b>
     </div>
 
-    <% post[:comments].each do |comment| %>
+    <% post.comments.forEach(function(comment) { %>
     <div class="isu-comment">
-      <a href="/@<%= escape_html(CGI.escape(comment[:user][:account_name])) %>" class="isu-comment-account-name"><%= escape_html(comment[:user][:account_name]) %></a>
-      <span class="isu-comment-text"><%= escape_html(comment[:comment]) %></span>
+      <a href="/@<%= comment.user.account_name %>" class="isu-comment-account-name"><%= comment.user.account_name %></a>
+      <span class="isu-comment-text"><%= comment.comment %></span>
     </div>
-    <% end %>
+    <% }) %>
     <div class="isu-comment-form">
       <form method="post" action="/comment">
         <input type="text" name="comment">
-        <input type="hidden" name="post_id" value="<%= post[:id] %>">
-        <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+        <input type="hidden" name="post_id" value="<%= post.id %>">
+        <input type="hidden" name="csrf_token" value="">
         <input type="submit" name="submit" value="submit">
       </form>
     </div>
