--- a/webapp/golang/templates/post.html
+++ b/webapp/golang/templates/post.html
@@ -1,4 +1,4 @@
-<div class="isu-post" id="pid_{{ .ID }}" data-created-at="{{ .CreatedAt }}">
+<div class="isu-post" id="pid_{{ .ID }}" data-created-at="{{.CreatedAt.Format "2006-01-02T15:04:05-07:00"}}">
   <div class="isu-post-header">
     <a href="/@{{.User.AccountName}} " class="isu-post-account-name">{{ .User.AccountName }}</a>
     <a href="/posts/{{.ID}}" class="isu-post-permalink">
