個別ページを表示できるようにする

--- a/webapp/node/views/posts.ejs
+++ b/webapp/node/views/posts.ejs
@@ -1,5 +1,5 @@
 <div class="isu-posts">
   <% posts.forEach(function(post) { %>
-    <%- include('post.ejs', { post: post }) %>
+    <%- include('_post.ejs', { post: post }) %>
   <% }) %>
 </div>
