--- a/webapp/golang/templates/login.html
+++ b/webapp/golang/templates/login.html
@@ -3,6 +3,12 @@
   <h1>ログイン</h1>
 </div>
 
+{{if .Flash}}
+<div id="notice-message" class="alert alert-danger">
+  {{.Flash}}
+</div>
+{{end}}
+
 <div class="submit">
   <form method="post" action="/login">
     <div class="form-account-name">
