--- a/webapp/node/views/_post.ejs
+++ b/webapp/node/views/_post.ejs
@@ -27,7 +27,7 @@
       <form method="post" action="/comment">
         <input type="text" name="comment">
         <input type="hidden" name="post_id" value="<%= post.id %>">
-        <input type="hidden" name="csrf_token" value="<%= me ? me.postKey : '' %>">
+        <input type="hidden" name="csrf_token" value="<%= me ? me.csrfToken : '' %>">
         <input type="submit" name="submit" value="submit">
       </form>
     </div>
