--- a/webapp/node/views/index.ejs
+++ b/webapp/node/views/index.ejs
@@ -8,7 +8,7 @@
       <textarea name="body"></textarea>
     </div>
     <div class="form-submit">
-      <input type="hidden" name="csrf_token" value="<%= me ? me.postKey : '' %>">
+      <input type="hidden" name="csrf_token" value="<%= me ? me.csrfToken : '' %>">
       <input type="submit" name="submit" value="submit">
     </div>
     <% if (messages.notice) { %>
