--- a/webapp/ruby/views/index.erb
+++ b/webapp/ruby/views/index.erb
@@ -7,7 +7,7 @@
       <textarea name="body"></textarea>
     </div>
     <div class="form-submit">
-      <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+      <input type="hidden" name="csrf_token" value="<%= escape_html session[:csrf_token] %>">
       <input type="submit" name="submit" value="submit">
     </div>
     <% if flash[:notice] %>
