--- a/webapp/golang/templates/index.html
+++ b/webapp/golang/templates/index.html
@@ -1,4 +1,4 @@
-{{ block "content" . }}
+{{ define "content" }}
 <div class="isu-submit">
   <form method="post" action="/" enctype="multipart/form-data">
     <div class="isu-form">
