remove jquery for go

--- a/webapp/golang/templates/footer.html
+++ b/webapp/golang/templates/footer.html
@@ -1,7 +1,5 @@
     </div>
-    <script src="/js/jquery-2.2.0.js"></script>
-    <script src="/js/jquery.timeago.js"></script>
-    <script src="/js/jquery.timeago.ja.js"></script>
+    <script src="/js/timeago.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
