--- a/webapp/golang/templates/layout.html
+++ b/webapp/golang/templates/layout.html
@@ -26,9 +26,7 @@
 
       {{ template "content" . }}
     </div>
-    <script src="/js/jquery-2.2.0.js"></script>
-    <script src="/js/jquery.timeago.js"></script>
-    <script src="/js/jquery.timeago.ja.js"></script>
+    <script src="/js/timeago.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
