remove jquery for other languages

--- a/webapp/ruby/views/layout.erb
+++ b/webapp/ruby/views/layout.erb
@@ -11,9 +11,7 @@
 
       <%= yield %>
     </div>
-    <script src="/js/jquery-2.2.0.js"></script>
-    <script src="/js/jquery.timeago.js"></script>
-    <script src="/js/jquery.timeago.ja.js"></script>
+    <script src="/js/timeago.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
