--- a/webapp/node/views/footer.ejs
+++ b/webapp/node/views/footer.ejs
@@ -1,7 +1,5 @@
     </div>
-    <script src="/js/jquery-2.2.0.js"></script>
-    <script src="/js/jquery.timeago.js"></script>
-    <script src="/js/jquery.timeago.ja.js"></script>
+    <script src="/js/timeago.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
